static/scss/partials/dashboard.scss
.mpp-dashbaord-header {
    background-color: white;
    margin-bottom: $spacing-md;
}

.mpp-dashbaord-header-name {
    font-weight: 700;
    width: 100%;
    word-wrap: break-word;
    padding-right: $spacing-sm;

    span {
        font-weight: 400;
        display: block;
    }
}

.mpp-dashbaord-header-container {
  max-width: $content-xl;
  margin: auto;
  padding: $spacing-xl $spacing-lg;
}

.mpp-dashbaord-header-title {
    margin-bottom: $spacing-xl;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    flex-wrap: wrap;
}

.mpp-dashbaord-header-stats {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    width: 100%;
    align-items: stretch;
    flex-direction: row;
}

.mpp-dashbaord-header-stats li {
    padding: 0 $spacing-xs;
    border-right: 1px solid #ECECEC;
    width: 100%;
    span {
        display: block;
        text-align: center;
        font-size: 2rem;
        font-weight: 800;
    }
    .label {
        font-size: 1rem;
        display: block;
        color: #666666;
        line-height: 1rem;
        font-weight: 400;
        margin-bottom: $spacing-xs;
    }
    &:last-child {
        border-right: 0;
    }
}

.mpp-action-link {
  color: $color-blue-50;
  appearance: none;
  background: none;
  border: none;
  outline: none;
  display: flex;
  align-items: center;
  .margin-right {
      margin-right: $spacing-xs;
  }
  .margin-left {
      margin-left: $spacing-xs;
  }
  &:hover {
      color: $color-blue-40;
  }
}

.mpp-action-tooltip-hover {
    display: none;
    position: absolute;
    padding-top: 10px;
    top: calc(100%);
    right: 0;
    min-width: 200px;
    @media #{$mq-md} {
        right: auto;
        left: $layout-lg;
    }
}

.mpp-action-tooltip-hover-wrapper {
        background-color: white;
        box-shadow: var(--dropShadowLight);
        border-radius: $border-radius-sm;
        position: relative;
        color: $color-violet-90;
        padding: $spacing-md;
        &:after{
            background-color: white;
            right: $layout-sm;

            // TODO: Fix shadow on bubble triangle
            // box-shadow: -2px 2px 2px 0 #3d3f4740;
            content: "\00a0";
            display: block;
            height: 20px;
            position: absolute;
            
            top: -10px;
            transform: rotate(135deg);
            width:  20px;

            @media #{$mq-md} {
                right: auto;
                left: $layout-sm;
            }

        }
    }

.mpp-action-tooltip {
    position: relative;
    z-index: 1;
    
    &:hover .mpp-action-tooltip-hover {
        display: block;
    }
}


@media screen and (min-width: 768px) {
    .mpp-dashbaord-header-container {
        display: flex;
        align-items: center;
        justify-content: space-between;
    }    
    .mpp-dashbaord-header-title {
        width: 25%;   
        flex-grow: 2;
        margin-bottom: 0;
        display: block;
    }
    .mpp-dashbaord-header-stats {
        width: auto;
        flex-shrink: 2;
        li {
            padding: 0 $spacing-md;
            width: auto;
        }
        .label {
            white-space: nowrap;
        }
    }
    .mpp-dashbaord-header-name {
        margin-bottom: $spacing-md;
    }
}

// Alias Card
.c-alias {
    background-color: rgba($color-white, .5);
    border-radius: $border-radius-md;
    padding: $spacing-md $spacing-md 0;
    box-shadow: $box-shadow-sm;
    margin-bottom: $spacing-lg;
    &.is-enabled {
        background-color: $color-white;
    }
}

.c-alias-main-info {
    min-height: $layout-sm;
    display: flex;
    
    @media #{$mq-md} {
        margin-bottom: $spacing-md;
    }
}

.c-alias-name {
    margin-left: $spacing-xs;
    max-width: 100%;
    height: 100%;
    flex-wrap: nowrap;
    width: $content-sm;

    .additional-notes, .relay-address {
        text-overflow: ellipsis;
    }

    .relay-address {
        display: none;
    }

    .additional-notes.show-label + button {
        margin-top: 0;
    }

    button {
        margin-top: $spacing-xs;
    }

    input {
        text-overflow: ellipsis;
        width: inherit;
        max-width: 100%;
    }

    @media #{$mq-md} {
        .relay-address {
            display: block;
        }

        margin-left: 0;
    }
}

.c-alias-copy {
    display: block;
    padding: $spacing-sm 0 $spacing-md;
    @media #{$mq-md} {
        display: none;
    }
}

.c-alias-stats {
    display: none;
    @media #{$mq-md} {
        margin-right: $spacing-md;
        display: flex;
    }
}

.c-alias-meta {
    display: flex;
    flex-wrap: nowrap;
    margin-left: auto;
}

.c-alias-additional-info {
    border-top: 1px solid transparent;
    overflow: hidden;
    max-height: 0;
    transition: all .2s ease-out;
    
    @media #{$mq-sm} {
        display: flex;
    }

    &.is-visible {
        border-color: $color-light-gray-30;
        max-height: 900px;
        padding:  $spacing-md 0;
    }
}

.c-alias-toggle-button {
    transition: transform .2s ease-out;
    margin: auto 0;
    &.is-active {
        transform: rotate(180deg);
    }
}

.c-alias-data-collection {
    @media #{$mq-sm} {
        display: flex;
        flex-wrap: wrap;
    }
    @media #{$mq-sm} {
        flex-wrap: nowrap;
        justify-content: flex-start;
    }
}

.c-alias-data {
    display: flex;
    align-items: center;
    line-height: normal;
    & + .c-alias-data {
        margin-top: $spacing-sm;
        @media #{$mq-sm} {
            margin-top: 0;
            margin-left: $spacing-xl;
        }
    }
    span {
        display: block;
    }
    .c-alias-data-label {
        color: $color-dark-gray-05;
        @include text-body-xs;
    }
    .c-alias-data-value {
        @include text-body-md;
        text-overflow: ellipsis;
    }
    &.created-by {
        img {
            height: 1.5rem;
        }
    }
    img {
        display: none;
        height: 1rem;
        @media #{$mq-md} {
            display: block;
            margin-right: $spacing-md;
        }
    }
}

.delete-relay-email-button {
    width: 100%;
    justify-content: center;
    outline: none !important;
    border: 1px solid transparent;
    background-color: $color-mpp-background;
    border-radius: $border-radius-sm;
    height: 36px;
    padding-right: $spacing-md;
    padding-left: $spacing-md;
    display: flex;
    align-items: center;
    color: $color-blue-50;
    &:hover, &:focus {
        border-color: $color-blue-50;
        box-shadow: $box-shadow-mpp-sm;
    }
    &:active {
        box-shadow: none;
        background-color: $color-white;
    }
    span {
        @include text-body-sm;
        font-weight: 500;
    }

    @media #{$mq-sm} {
        width: auto;
        justify-content: flex-start;
    }

}

